<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.generalknowledgequiz.MainActivity">

        <EditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:layout_marginTop="@dimen/questionTopMargin"
            android:textSize="@dimen/questionText"
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/questionBottomMargin"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ans1">

            <RadioButton
                android:id="@+id/ans1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1A"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1B"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1C"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1D"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textSize="@dimen/questionText"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/questionTopMargin"
            android:layout_marginBottom="@dimen/questionBottomMargin"/>

        <ImageView
            android:contentDescription="@string/contentDescription"
            android:layout_width="@dimen/imageHeight"
            android:layout_height="@dimen/imageWidth"
            android:src="@drawable/monalisa" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ans2">

            <RadioButton
                android:id="@+id/ans2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2A"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2B"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2C"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2D"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textSize="@dimen/questionText"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/questionTopMargin"
            android:layout_marginBottom="@dimen/questionBottomMargin"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ans3">

            <RadioButton
                android:id="@+id/ans3A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3A"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans3B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3B"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans3C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3C"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/ans3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3D"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textSize="@dimen/questionText"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/questionTopMargin"
            android:layout_marginBottom="@dimen/questionBottomMargin"/>

        <EditText
            android:id="@+id/ans4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ans4Hint"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textSize="@dimen/questionText"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/questionTopMargin"
            android:layout_marginBottom="@dimen/questionBottomMargin"/>

        <CheckBox
            android:id="@+id/ans5A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5A"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/ans5B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5B"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/ans5C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5C"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/ans5D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5D"
            android:textAppearance="?android:textAppearanceSmall" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginRight="@dimen/submitMargin"
            android:layout_marginLeft="@dimen/submitMargin"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/buttonText"
            android:onClick="submitQuiz"/>
    </LinearLayout>
</ScrollView>